--- a/website code/css/style.css
+++ b/website code/css/style.css
@@ -359,7 +359,11 @@ footer p:nth-child(2){
 
 /* sub web css */
 .subWebContent{
-	text-align: center;
+	position: absolute;
+	top: 50%;
+	left:35%;
+	transform: translateY(50%);
+	
 }
 
 .subWebContent h2, h3 {
