--- a/website code/css/style.css
+++ b/website code/css/style.css
@@ -7,7 +7,8 @@
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-image: url(../img/flinder.jpg);
+	/* background-image: url(../img/flinder.jpg); */
+	background-color: black;
 	background-size: cover;
 	background-position: center;
 }
@@ -423,22 +424,95 @@ footer p:nth-child(2){
 }
 
 
-	/* wide laptop */
-@media screen and (max-width: 1200px) {
-	.home-hero-image {
-		height: 50vh;
-	}
+
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
 }
 
-/* small laptop */
-@media screen and (max-width: 900px) {
-	.home-hero-image {
-		height: 60vh;
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #f30707;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-item {
+    margin-left: 5rem;
+}
+
+
+.header{
+    border-bottom: 1px solid #E2E8F0;
+}
+
+
+
+
+
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: rgb(161, 10, 10);
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        -webkit-transform: translateY(8px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        -webkit-transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
+    }
+	
+	.content {
+		display: none;
 	}
-	.hero-text-home {
-		margin-top: 25px;
-	}
-	.hero-school-home-image {
-		width: 40%;
-	}
+
 }
