--- a/website code/css/style.css
+++ b/website code/css/style.css
@@ -7,7 +7,7 @@
 .hero{
 	height: 100vh;
 	width: 100%;
-	/* background-image: url(../img/flinder.jpg); */
+	background-image: url(../img/flinder.jpg);
 	background-color: black;
 	background-size: cover;
 	background-position: center;
@@ -321,19 +321,14 @@ footer{
 	align-items: center;
 	justify-content: center;
 }
-footer p:nth-child(1){
+
+.footer-title, .footer-info {
 	font-size: 30px;
 	color: white;
 	margin-bottom: 20px;
 	font-weight: bold;
 }
-footer p:nth-child(2){
-	color: white;
-	font-size: 17px;
-	width: 500px;
-	text-align: center;
-	line-height: 26px;
-}
+
 .social{
 	display: flex;
 }
@@ -371,6 +366,27 @@ footer p:nth-child(2){
 	transition: transform .4s; 
 	float: none;
 	display: block;
+}
+
+.social__media {
+	max-width: 1000px;
+	width: 100%;
+	color: #fcfc;
+  }
+  
+.social__media--wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 90%;
+	max-width: 1000px;
+	margin: 40px auto 0 auto;
+}
+
+.website__rights {
+	font-size: 12px;
+	color: white;
+	padding-left: 42%;
 }
 
 
@@ -466,6 +482,15 @@ footer p:nth-child(2){
 }
 
 
+#contact-detail {
+	position: fixed; 
+	text-align: center; 
+	width: 100%; 
+	height: 100%; 
+	top: 70px; 
+	display: none;
+}
+
 
 
 
@@ -510,9 +535,32 @@ footer p:nth-child(2){
         -webkit-transform: translateY(-8px) rotate(-45deg);
         transform: translateY(-8px) rotate(-45deg);
     }
-	
-	.content {
+
+	.col-1 {
+		width: 75%;
+		text-align: center;
+		padding-left: 20px;
+	}
+
+	.contactDetailP {
+		text-align: center;
+	}
+
+	.end {
+		width: 100%;
+	}
+
+	.scan_code {
+		width: 80%;
+	}
+
+	#contact-detail {
+		position: fixed; 
+		text-align: center; 
+		width: 300%; 
+		top: 70px; 
 		display: none;
 	}
+
 
 }
