--- a/website code/css/style.css
+++ b/website code/css/style.css
@@ -5,7 +5,7 @@
 	box-sizing: border-box;
 }
 .hero{
-	height: 100vh;
+	height: 90vh;
 	width: 100%;
 	background-image: url(../img/flinder.jpg);
 	background-color: black;
@@ -97,6 +97,7 @@ nav ul li a:hover, .dropdown:hover .dropbtn {
 	text-decoration: none;
 	border: 2px solid transparent;
 	border-top-width: 4em;
+	border-bottom-width: 1.4em;
 	font-weight: bold;
 	padding: 10px 25px;
 	 
@@ -443,10 +444,11 @@ footer{
 
 
 .navbar {
+	background-color: #000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1.5rem;
+    padding: 0.5rem 1rem;
 }
 
 .hamburger {
@@ -478,6 +480,7 @@ footer{
 
 
 .header{
+	background-color: #000;
     border-bottom: 1px solid #E2E8F0;
 }
 
