--- a/website code/css/style.css
+++ b/website code/css/style.css
@@ -495,6 +495,11 @@ footer{
 }
 
 
+#EN_to_CN_Ham {
+	display: none;
+}
+
+
 
 
 @media only screen and (max-width: 1334px) {
@@ -636,5 +641,13 @@ footer{
 
 	#EN_to_CN {
 		display: none;
+	}
+
+	#EN_to_CN_Ham {
+		display: inline;
+	}
+
+	.EN_to_CN_span {
+		color: white;
 	}
 }
